--- a/scss/pages/index/index.scss
+++ b/scss/pages/index/index.scss
@@ -16,7 +16,7 @@ body.no-scroll {
     width: 100%;
     animation: fadeIn 0.5s;
     transform: translateY(0);
-    // transition: all 0.5s;
+    transition: all 0.5s;
     background-color: $bg-transparent;
     @media only screen and (max-width: 1199.98px) {
       // height: 100%;
@@ -77,8 +77,14 @@ body.no-scroll {
             margin-right: 0 !important;
             margin-bottom: 0;
             list-style: none;
+            @media only screen and (max-width: 1280px) {
+              margin-left: 269px;
+            }
             @media only screen and (max-width: 1260px) {
-              margin-left: 200px;
+              margin-left: 240px;
+            }
+            @media only screen and (max-width: 1240px) {
+              margin-left: 210px;
             }
             .navItem {
               padding-right: 50px;
@@ -110,17 +116,6 @@ body.no-scroll {
                   }
                 }
               }
-            }
-          }
-          .navbarNav.navbarRespon {
-            @media only screen and (max-width: 1280px) {
-              margin-left: 320px;
-            }
-            @media only screen and (max-width: 1260px) {
-              margin-left: 300px;
-            }
-            @media only screen and (max-width: 1220px) {
-              margin-left: 279px;
             }
           }
           .form-inline {
@@ -203,6 +198,7 @@ body.no-scroll {
             span {
               display: inline-block;
               width: 27px;
+              padding: 12px;
               &:focus-visible {
                 outline: none;
               }
@@ -310,8 +306,9 @@ body.no-scroll {
     width: 100%;
     height: 48px;
     animation: fadeInDown 0.5s;
-    transform: translateY(-86px);
-    // transition: all 0.5s;
+    animation-fill-mode: forwards;
+    top: -49px;
+    transition: all 0.5s;
     background-color: $bg-light;
     box-shadow: $bs-header;
     @media only screen and (max-width: 1199.98px) {
@@ -376,8 +373,14 @@ body.no-scroll {
             margin-right: 0 !important;
             margin-bottom: 0;
             list-style: none;
+            @media only screen and (max-width: 1280px) {
+              margin-left: 320px;
+            }
             @media only screen and (max-width: 1260px) {
-              margin-left: 200px;
+              margin-left: 300px;
+            }
+            @media only screen and (max-width: 1220px) {
+              margin-left: 279px;
             }
             .navItem {
               padding-right: 50px;
@@ -409,17 +412,6 @@ body.no-scroll {
                   }
                 }
               }
-            }
-          }
-          .navbarNav.navbarRespon {
-            @media only screen and (max-width: 1280px) {
-              margin-left: 320px;
-            }
-            @media only screen and (max-width: 1260px) {
-              margin-left: 300px;
-            }
-            @media only screen and (max-width: 1220px) {
-              margin-left: 279px;
             }
           }
           .form-inline {
@@ -503,6 +495,7 @@ body.no-scroll {
             span {
               display: inline-block;
               width: 27px;
+              padding: 12px;
               &:focus-visible {
                 outline: none;
               }
@@ -604,11 +597,16 @@ body.no-scroll {
     }
   }
 
-  .header-sub.header-open {
-    transform: translateY(0);
-  }
+  // .header-open {
+  //   transform: translateY(0);
+  // }
 
-  #headerPage.header-close {
+  .header.header-close {
+    .container {
+      .navbar {
+        animation: fadeInDown 0.5s;
+      }
+    }
   }
 
   .about {
@@ -667,7 +665,6 @@ body.no-scroll {
           }
         }
       }
-
       .bg-top {
         position: absolute;
         right: 0;
@@ -1179,6 +1176,11 @@ body.no-scroll {
               margin: 10px 0 0 0;
               width: 482px;
               height: 482px;
+            }
+            @media only screen and (max-width: 575.98px) {
+              margin: 10px 0 0 0;
+              width: 100%;
+              height: auto;
             }
           }
         }
@@ -1866,10 +1868,25 @@ body.no-scroll {
 @keyframes fadeInDown {
   from {
     opacity: 0;
-    transform: translateY(-86px);
+    top: -48px;
   }
   to {
     opacity: 1;
-    transform: translateY(0);
+    top: 0;
+  }
+}
+
+@keyframes fadeDownUp {
+  0% {
+    opacity: 0;
+    transform: translateY(0px);
+  }
+  50% {
+    opacity: 0;
+    transform: translateY(-86px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
   }
 }
